@@ -1,5 +1,5 @@
 // HiC-Pro
-// Copyright 2015 Institut Curie                               
+// Copyright 2019 Institut Curie                               
 // Author(s): Nicolas Servant
 // Contact: nicolas.servant@curie.fr
 // This software is distributed without any guarantee under the terms of the BSD-3 licence
@@ -23,6 +23,9 @@ static int usage(int ret=1)
   return ret;
 }
 
+/*
+Get options from command line
+*/
 static int get_options(int argc, char* argv[], std::string& fastqFile,
                        std::vector<std::string>& cutSites, std::string& output, bool& rmuntrim)
 {
@@ -63,6 +66,36 @@ static int get_options(int argc, char* argv[], std::string& fastqFile,
   return 0;
 }
 
+/*
+Replace 'N' in motifs
+*/
+static std::vector<std::string> check_cutSites(std::vector<std::string>& cutSites)
+{
+  std::vector<std::string> outCutSites;
+  for(std::vector<std::string>::iterator it = cutSites.begin(); it != cutSites.end(); ++it){
+    std::string motif = *it;
+    size_t pos = motif.find('N');
+
+    if( pos != std::string::npos){
+      // replace N by A,C,G,T
+      outCutSites.push_back(motif.replace(pos, 1, "A"));
+      outCutSites.push_back(motif.replace(pos, 1, "C"));
+      outCutSites.push_back(motif.replace(pos, 1, "G"));
+      outCutSites.push_back(motif.replace(pos, 1, "T"));
+
+      // Get the next occurrence from the current position
+      pos = motif.find('N', pos);
+      if( pos != std::string::npos){
+	outCutSites = check_cutSites(outCutSites);
+      }
+    }else{
+      outCutSites.push_back(motif);
+    }
+  }
+  return (outCutSites);
+}
+
+
 static int trim_fastq(std::string& fastqFile,
                       std::vector<std::string>& cutSites,
                       std::string& outFile, bool& rmuntrim)
@@ -74,6 +107,7 @@ static int trim_fastq(std::string& fastqFile,
   std::ofstream ofs (outFile);
 
   if (ifs.is_open()){
+    // foreach reads
     while (getline(ifs, ID)) {
       std::string seq;
       std::string dummy;
@@ -86,10 +120,11 @@ static int trim_fastq(std::string& fastqFile,
       bool find_pos = false;
       size_t pos = std::string::npos;
       for (std::vector<std::string>::iterator it = cutSites.begin(); it != cutSites.end(); ++it){
-        size_t tmp_pos = seq.find(*it);
+	// return the first position detected
+	size_t tmp_pos = seq.find(*it);
         if (tmp_pos != std::string::npos) {
-          // If find_pos is alread True, there is a problem (there are two cut
-          // sites in the same read).)
+          // If find_pos is alread True, there are two cut sites in the same read).
+	  // Cut at the left-most position
           if (find_pos == true){
             if(tmp_pos < pos) {
               pos = tmp_pos;
@@ -132,17 +167,19 @@ int main(int argc, char* argv[])
   bool rmuntrim = false;
 
   int ret = get_options(argc, argv, fastqFile, cutSites, outFile, rmuntrim);
-  printf("##Fastq file: %s\n", fastqFile.c_str());
-  printf("##Restriction sites:\n");
-  for(std::vector<std::string>::iterator it = cutSites.begin(); it != cutSites.end(); ++it){
-    std::cout << *it << std::endl;
-  }
-  printf("##Output File: %s\n", outFile.c_str());
-
   if (fastqFile.empty() || cutSites.size() == 0 || outFile.empty()){
     usage();
     exit(ret);
   }
+
+  printf("##Fastq file: %s\n", fastqFile.c_str());
+
+  cutSites = check_cutSites(cutSites);
+  printf("##Restriction sites (n=%d):\n", (int)cutSites.size());
+  for(std::vector<std::string>::iterator it = cutSites.begin(); it != cutSites.end(); ++it){
+    std::cout << *it << std::endl;
+  }
+  printf("##Output File: %s\n", outFile.c_str());
 
   int trim_count=trim_fastq(fastqFile, cutSites, outFile, rmuntrim);
   printf("\n##Trimmed reads: %d\n", trim_count);
